# page_analyzer

./: .env  .gitignore  Makefile  README.md  database.sql  pyproject.toml  requirements.txt
.github/workflows/: linter_check.yml
page_analyzer/: app.py  constants.py  db.py  exceptions.py  routes.py  services.py
page_analyzer/routes/: filters.py  main_routes.py
page_analyzer/templates/: all_sites.html  base.html  site.html
page_analyzer/templates/components/: all_sites_table.html  check_table.html  enter_url.html  site_table.html
page_analyzer/templates/components/errors/: 404.html
